# imgui

./: .gitignore  .gitmodules  Gemfile  README.md  Rakefile  imgui.gemspec
.github/workflows/: actionlint.yml  main.yml  release.yml  update-native.yml  zizmor.yml
api/: v1.json
ext/: CMakeLists.txt  Rakefile  backend_function_bridge.cpp  backend_function_bridge.h  build_cimgui.rb  extconf.rb  glfw_vulkan_bridge.cpp  imgui_ruby_build_config.h  imgui_ruby_glfw.cpp  imgui_ruby_sdl3.cpp  imgui_ruby_wgpu.cpp  install_cimgui.rb  webgpu_function_bridge.cpp
generator/: api_emitter.rb  emitter.rb  generate.rb  native-dependencies.yml  native_dependency_lock.rb  native_dependency_snapshot.rb  overrides.yml  type_mapper.rb  update_vendor.rb
lib/: imgui.rb
lib/imgui/: api.rb  api_generated.rb  api_support.rb  backends.rb  draw_data.rb  dsl.rb  dsl_support.rb  easy_loop.rb  errors.rb  fonts.rb  io.rb  layout.rb  memory_pool.rb  native.rb  plot.rb  struct_value.rb  style.rb  value.rb  version.rb  widgets.rb
lib/imgui/backends/: glfw.rb  opengl3.rb  sdl3.rb  wgpu.rb
lib/imgui/native/: enums.rb  functions.rb  structs.rb  typedefs.rb
lib/imgui/plot/: api.rb
lib/imgui/plot/native/: enums.rb  functions.rb  structs.rb  typedefs.rb
rakelib/: platform_gem.rake  source_gem.rake
sig/: imgui.rbs
spec/: api_compatibility_spec.rb  api_spec.rb  backends_spec.rb  dsl_spec.rb  generator_spec.rb  glfw_opengl_smoke.rb  imgui_spec.rb  io_spec.rb  native_smoke.rb  native_spec.rb  native_symbol_audit.rb  plot_spec.rb  sdl3_smoke.rb  spec_helper.rb  value_spec.rb  wgpu_smoke.rb
spec/fixtures/generator/: functions.rb.golden  overrides.yml
spec/fixtures/generator/metadata/: definitions.json  structs_and_enums.json  typedefs_dict.json
